--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS and JavaScript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout Practice</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
